src/styles/pages/Home.css
.Home.page {
  margin-top: 80px;
  position: relative;
  pointer-events: none;
  z-index: 1;
  /* margin-bottom: 80px; */
}

.Home h2.animated {
  font-weight: bold;
  font-size: 5rem;
  background-image: url('https://i.imgur.com/2TdOqp8.gif');
  /* background-image: url('https://i.imgur.com/U7SCkat.gif'); */
  background-size: 160px 160px;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.Home h2 {
  font-weight: bold;
  font-size: 48px;
  color: var(--bs-primary-text);
}

.Home h2.outlined {
  font-weight: bold;
  font-size: 40px;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: var(--bs-dark);
  color: transparent;
}
.Home h2.outlined::selection {
  background-color: transparent;
}
.Home_topStories > ol > li {
  margin: 0.2rem;
  border-radius: 0.2rem;
  position: relative;
  padding: 1rem;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  transition: box-shadow 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
}
.Home_topStories > ol > li:hover {
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.Home_topStories .CoverItems {
  padding-left: 1rem;
}

@media (min-width: 576px) {
  .Home {
    margin-top: 0;
  }
  .Home h2 {
    font-size: 5vw;
  }
  .Home h2.outlined {
    font-size: 6vh;
  }
}

.scroll-container {
  width: 30px;
  height: 60px;
  border: 2px solid var(--bs-dark);
  border-radius: 15px;
  position: relative;
  cursor: pointer;
  transition: border-color 0.36s ease-in-out, opacity 0.36s ease-in-out;
  background-color: #ffffff26;
}

.scroll-container:hover {
  border-color: var(--white);
}

.scroller {
  width: 18px;
  border-radius: 8px;
  background-color: var(--bs-dark);
  position: absolute;
  top: 4px;
  left: 4px;
  bottom: 34px;
  animation: scroller 1500ms ease-out infinite;
  transition: background-color 0.36s ease-in-out;
}

.scroll-container:hover .scroller {
  background-color: var(--bs-white);
}

@keyframes scroller {
  0% {
    bottom: 34px;
  }
  5% {
    top: 4px;
  }
  32% {
    bottom: 4px;
  }
  66% {
    top: 34px;
    bottom: 4px;
  }
  100% {
    top: 4px;
    bottom: 34px;
  }
}

.Home_animatedWord:hover {
  opacity: 1 !important;
  color: var(--bs-secondary) !important;
}

.Home_firstParagraph p:first-of-type {
  font-size: 1.25em;
  margin-bottom: 2rem;
}

.Home_outlined {
  color: transparent; /* var(--bs-primary); */
  font-weight: normal;
  font-size: 3.4rem;
  line-height: 1.2em;
  font-weight: bold;
  margin-top: var(--size-5);
  margin-bottom: var(--size-5);
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: var(--bs-primary-text);
  color: transparent;
  /* var(--bs-primary-text); */
}

